--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
       <img src="assets/img/hero-img.jpg" alt="" data-aos="fade-in">
 
       <div class="container d-flex flex-column align-items-center justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
-        <h2>I am Morgan Freeman</h2>
-        <p><span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p>
+        <h2>I am Alejandro Horna</h2>
+        <p><span class="typed" data-typed-items="Economist interested on:, Development Economics, Behavioral Economics, Impact Evaluation"></span></p>
       </div>
 
     </section><!-- /Hero Section -->
@@ -105,10 +105,10 @@
                 <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
               </div>
               <div class="col-lg-7 about-info">
-                <p><strong>Name: </strong> <span>Morgan Freeman</span></p>
-                <p><strong>Profile: </strong> <span>full stack developer</span></p>
-                <p><strong>Email: </strong> <span>contact@example.com</span></p>
-                <p><strong>Phone: </strong> <span>(617) 557-0089</span></p>
+                <p><strong>Name: </strong> <span>Gerardo Alejandro Horna Muñoz</p>
+                <p><strong>Profile: </strong> <span>Applied Economist</span></p>
+                <p><strong>Email: </strong> <span>ga.hornam@alum.up.edu.pe</span></p>
+                <p><strong>Phone: </strong> <span>(+51) 982833254</span></p>
               </div>
             </div>
 
@@ -117,28 +117,28 @@
               <h5>Skills</h5>
 
               <div class="progress">
-                <span class="skill"><span>HTML</span> <i class="val">100%</i></span>
+                <span class="skill"><span>Microeconometrics</span> <i class="val">100%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div><!-- End Skills Item -->
 
               <div class="progress">
-                <span class="skill"><span>CSS</span> <i class="val">90%</i></span>
+                <span class="skill"><span>Stata</span> <i class="val">90%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div><!-- End Skills Item -->
 
               <div class="progress">
-                <span class="skill"><span>JavaScript</span> <i class="val">75%</i></span>
+                <span class="skill"><span>LaTeX</span> <i class="val">75%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div><!-- End Skills Item -->
 
               <div class="progress">
-                <span class="skill"><span>Photoshop</span> <i class="val">55%</i></span>
+                <span class="skill"><span>RStudio</span> <i class="val">55%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
@@ -151,20 +151,15 @@
             <div class="about-me">
               <h4>About me</h4>
               <p>
-                Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id
-                imperdiet et, porttitor
-                at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla
-                porttitor accumsan tincidunt.
+                My commitment lies in exploring the intersection between applied economic theory
+                and the public sector, actively seeking opportunities to use this knowledge with the 
+                aim of generating a positive impact on society.
               </p>
               <p>
-                Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis
-                porttitor volutpat. Vestibulum
-                ac diam sit amet quam vehicula elementum sed sit amet dui. porttitor at sem.
+                My interests are centered on research fields such as development economics, impact evaluation, behavioral 
+                microeconomics, and public economics.
               </p>
               <p>
-                Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
-                Nulla porttitor accumsan
-                tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
               </p>
             </div>
           </div>
