--- a/index.html
+++ b/index.html
@@ -215,26 +215,27 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Centro de Investigación de la Universidad del Pacífico (CIUP)</h4>
+              <h5> Feb 2024 - Present</h5>
+              <p><em>Research Assistant to Professor Stanislao Maldonado (PhD UC Berkeley). Areas: Development Economics, Political Economy, Behavioral Economics, and Impact Evaluation. </em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Database management and statistical calculation</li>
+                <li>Support in the elaboration of scientific papers </li>
+                <li>Review and synthesis of literature</li>
+                <li>Preparation of Lectures Notes</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Red de estudios para el desarrollo (REDES)</h4>
+              <h5> Jan 2023 - Apr 2023</h5>
+              <p><em>Research Assistant. Areas: Development Economics, Agriculture, Education, and Public Policy
+              </em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Support in the preparation of Policy Briefs, Policy Papers, and Questionnaires</li>
+                <li>Review and synthesis of literature, database management, report preparation based on statistics, and interpretation of results</li>
+                <li>D</li>
+                <li>DD</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
