--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
             <div class="row justify-content-between gy-4">
               <div class="col-lg-5">
-                <img src="assets/img/foto.jpg" class="img-fluid" alt="">
+                <img src="assets/img/Foto.jpg" class="img-fluid" alt="">
               </div>
               <div class="col-lg-7 about-info">
                 <p><strong>Name: </strong> <span>Gerardo Alejandro Horna Muñoz</p>
