--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
             <div class="resume-item pb-0">
               <h4>Alejandro Horna</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <p><em>Undergraduate Student</em></p>
               <ul>
                 <li>Lima Peru</li>
                 <li>(+51) 982833254</li>
