--- a/index.html
+++ b/index.html
@@ -204,12 +204,12 @@
               <p>Bachelor's Student in Economics with a concentration in the public sector, completed eighth semester. Top Third 2023.</p>
             </div><!-- Edn Resume Item -->
 
-            <div class="resume-item">
+            <!-- <div class="resume-item">
               <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
               <h5>2010 - 2014</h5>
               <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
               <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
-            </div><!-- Edn Resume Item -->
+            </div>Edn Resume Item -->
 
           </div>
 
