--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             <div class="resume-item">
               <h4>Centro de Investigación de la Universidad del Pacífico (CIUP)</h4>
               <h5> Feb 2024 - Present</h5>
-              <p><em>Research Assistant to Professor Stanislao Maldonado (PhD UC Berkeley). Areas: Development Economics, Political Economy, Behavioral Economics, and Impact Evaluation. </em></p>
+              <p><em>Research Assistant to Professor <a href="https://www.stanislaomaldonado.org/">Stanislao Maldonado</a>  (PhD UC Berkeley). Areas: Development Economics, Political Economy, Behavioral Economics, and Impact Evaluation. </em></p>
               <ul>
                 <li>Database management and statistical calculation</li>
                 <li>Support in the elaboration of scientific papers </li>
